style: Format comment

--- a/rent_Moscow_preprocessing.ipynb
+++ b/rent_Moscow_preprocessing.ipynb
@@ -206,7 +206,7 @@
     }
    ],
    "source": [
-    "# считтать датасет, столбец с датой сразу преобразовать в datetime\n",
+    "# считать датасет, столбец с датой сразу преобразовать в datetime\n",
     "rent = pd.read_csv('rent_apartments.csv', sep=',', parse_dates=[10], date_format='%d/%m/%Y')\n",
     "rent[:4]"
    ]
